--- a/src/onapsdk/templates/instantiate_ala_carte.json.j2
+++ b/src/onapsdk/templates/instantiate_ala_carte.json.j2
@@ -20,7 +20,7 @@
         },
 		"requestParameters": {
 			"userParams": [],
-			"testApi": {% if use_vnf_api %}"VNF_API"{% else %}"GR_API"{% endif %},
+			"testApi": "GR_API",
 			"subscriptionServiceType": "{{ sdc_service.name }}",
 			"aLaCarte": true
 		},
