--- a/src/onapsdk/templates/instantiate_vnf_ala_carte.json.j2
+++ b/src/onapsdk/templates/instantiate_vnf_ala_carte.json.j2
@@ -19,7 +19,7 @@
         "requestParameters": {
             "userParams": [],
             "aLaCarte": true,
-            "testApi": {% if use_vnf_api %}"VNF_API"{% else %}"GR_API"{% endif %}
+            "testApi": "GR_API"
         },
         "cloudConfiguration": {
             "tenantId": "{{ tenant.tenant_id }}",
