--- a/src/onapsdk/templates/instantiate_network_vnf_ala_carte_base.json.j2
+++ b/src/onapsdk/templates/instantiate_network_vnf_ala_carte_base.json.j2
@@ -1,31 +1,14 @@
-{% extends "instantiate_network_vnf_ala_carte_base.json.j2" %}
-{% block model_info %}
-    "modelType": "vnf",
-    "modelInvariantId": "{{ vnf.metadata["invariantUUID"] }}",
-    "modelVersionId": "{{ vnf.metadata["UUID"] }}",
-    "modelName": "{{ vnf.metadata["name"] }}",
-    "modelVersion": "{{ vnf.metadata["version"] }}",
-    "modelCustomizationId": "{{ vnf.metadata["customizationUUID"] }}",
-    "modelCustomizationName": "{{ vnf.name }}"
-{% endblock %}
-
-{# {
+{
     "requestDetails": {
         "requestInfo": {
-            "instanceName": "{{ vnf_service_instance_name }}",
+            "instanceName": "{{ instance_name }}",
             "source": "VID",
             "suppressRollback": false,
             "requestorId": "test",
-            "productFamilyId": "1234"
+            "productFamilyId": "{{ service_instance.model_invariant_id }}"
         },
         "modelInfo": {
-            "modelType": "vnf",
-            "modelInvariantId": "{{ vnf.metadata["invariantUUID"] }}",
-            "modelVersionId": "{{ vnf.metadata["UUID"] }}",
-            "modelName": "{{ vnf.metadata["name"] }}",
-            "modelVersion": "{{ vnf.metadata["version"] }}",
-            "modelCustomizationId": "{{ vnf.metadata["customizationUUID"] }}",
-            "modelCustomizationName": "{{ vnf.name }}"
+            {% block model_info %}{% endblock %}
         },
         "requestParameters": {
             "userParams": [],
@@ -56,4 +39,4 @@
             }
         }]
     }
-} #}
+}
