Set service instantiate type

--- a/src/onapsdk/templates/service_create.json.j2
+++ b/src/onapsdk/templates/service_create.json.j2
@@ -19,7 +19,7 @@
   "attributes": [],
   "componentInstances": [],
   "ecompGeneratedNaming": true,
-  "instantiationType": "A-la-carte",
+  "instantiationType": "{{ instantiation_type }}",
   "environmentContext": "General_Revenue-Bearing",
   "categories": [
     {
