--- a/src/onapsdk/templates/deletion_vf_module.json.j2
+++ b/src/onapsdk/templates/deletion_vf_module.json.j2
@@ -6,12 +6,11 @@
 		},
 		"modelInfo": {
             "modelType": "vfModule",
-            "modelInvariantId": "{{ vf_module_instance.vf_module.metadata["vfModuleModelInvariantUUID"] }}",
-            "modelVersionId": "{{ vf_module_instance.vf_module.metadata["vfModuleModelUUID"] }}",
-            "modelName": "{{ vf_module_instance.vf_module.metadata["vfModuleModelName"] }}",
-            "modelVersion": "{{ vf_module_instance.vf_module.metadata["vfModuleModelVersion"] }}",
-            "modelCustomizationId": "{{vf_module_instance.vf_module.metadata["vfModuleModelCustomizationUUID"] }}",
-            "modelCustomizationName": "{{ vf_module_instance.vf_module.metadata["vfModuleModelName"] }}"
+            "modelInvariantId": "{{ vf_module_instance.model_invariant_id }}",
+            "modelVersionId": "{{ vf_module_instance.model_version_id }}",
+            "modelName": "{{ vf_module_instance.vf_module_name }}",
+            "modelVersion": "{{ vf_module_instance.resource_version }}",
+            "modelCustomizationId": "{{ vf_module_instance.model_customization_id }}"
 		},
 		"requestParameters": {
 			"testApi": "GR_API"
