Resolve "Add Service to Service Composition"

--- a/src/onapsdk/templates/add_resource_to_service.json.j2
+++ b/src/onapsdk/templates/add_resource_to_service.json.j2
@@ -4,7 +4,7 @@
   "posY": {{ posY| default(100) }},
   "posX": {{ posX| default(200) }},
   "uniqueId": "{{ resource.unique_identifier }}",
-  "originType": "{{ resource_type | upper }}",
+  "originType": "{{ resource_type }}",
   "componentUid": "{{ resource.unique_identifier }}",
   "icon": "defaulticon"
 }
