--- a/src/onapsdk/templates/instantiate_service_macro.json.j2
+++ b/src/onapsdk/templates/instantiate_service_macro.json.j2
@@ -34,6 +34,12 @@
                 {
                     "Homing_Solution": "none"
                 },
+				{% if enable_multicloud %}
+				{
+                    "name":"orchestrator",
+                    "value":"multicloud"
+                },
+				{% endif %}
                 {
                     "service": {
                         "instanceParams": [],
