tca format changed between frankfurt and guilin
Signed-off-by: mrichomme <morgan.richomme@orange.com>

--- a/src/onapsdk/templates/clamp_add_tca_config.json.j2
+++ b/src/onapsdk/templates/clamp_add_tca_config.json.j2
@@ -1,7 +1,7 @@
 {
   "name": "{{ name }}",
   "configurationsJson": {
-    "tca_policy": {
+    "tca.policy": {
       "domain": "measurementsForVfScaling",
       "metricsPerEventName": [
         {
