Resolve "A la carte instantiation - enable parameters to be passed to "userParams" for VNF and VfModule"

--- a/src/onapsdk/so/templates/instantiate_vf_module_ala_carte.json.j2
+++ b/src/onapsdk/so/templates/instantiate_vf_module_ala_carte.json.j2
@@ -17,7 +17,14 @@
             "modelCustomizationName": "{{ vf_module.metadata["vfModuleModelName"] }}"
         },
         "requestParameters": {
-            "userParams": [],
+            "userParams": [
+                {% for parameter in vf_module_parameters %}
+                {
+                    "name": "{{ parameter.name }}",
+                    "value": "{{ parameter.value }}"
+                }{% if not loop.last %},{% endif %}
+                {% endfor %}
+            ],
             "testApi": "GR_API",
             "usePreload": true
         },
