Resolve "No alacarte flag in the SO request body"

--- a/src/onapsdk/so/templates/deletion_network.json.j2
+++ b/src/onapsdk/so/templates/deletion_network.json.j2
@@ -8,7 +8,8 @@
 			"modelType": "network"
 		},
 		"requestParameters": {
-			"testApi": "GR_API"
+			"testApi": "GR_API",
+			"aLaCarte": {{ a_la_carte | tojson }}
 		},
         "cloudConfiguration": {
             "cloudOwner": "{{ network_instance.service_instance.service_subscription.cloud_region.cloud_owner }}",
