Added missing aLaCarte flag for vf-module create

--- a/src/onapsdk/so/templates/instantiate_vf_module_ala_carte.json.j2
+++ b/src/onapsdk/so/templates/instantiate_vf_module_ala_carte.json.j2
@@ -26,7 +26,8 @@
                 {% endfor %}
             ],
             "testApi": "GR_API",
-            "usePreload": true
+            "usePreload": true,
+            "aLaCarte": true
         },
         "cloudConfiguration": {
             "tenantId": "{{ tenant.tenant_id }}",
