--- a/src/onapsdk/so/templates/instantiate_service_macro.json.j2
+++ b/src/onapsdk/so/templates/instantiate_service_macro.json.j2
@@ -29,7 +29,9 @@
             "globalSubscriberId": "{{ customer.global_customer_id }}"
         },
         "requestParameters": {
+            {% block subscriptionServiceType %}
             "subscriptionServiceType": "{{ sdc_service.name }}",
+            {% endblock %}
             "userParams": [
                 {
                     "Homing_Solution": "none"
@@ -74,6 +76,7 @@
                             ]
                                 {% if sdc_service.vnfs %},{% endif %}
                             {% endif %}
+                            {% block vnfs %}
                             {% if sdc_service.vnfs %}
                             "vnfs": [
                                 {% for vnf in sdc_service.vnfs %}
@@ -145,6 +148,7 @@
                                 {% endfor %}
                             ]
                             {% endif %}
+                            {% endblock %}
                         },
                         "modelInfo": {
                             "modelVersion": "1.0",
