--- a/src/onapsdk/so/templates/instantiate_multi_vnf_service_macro.json.j2
+++ b/src/onapsdk/so/templates/instantiate_multi_vnf_service_macro.json.j2
@@ -27,10 +27,10 @@
                 "lcpCloudRegionId": "{{ cloud_region.cloud_region_id }}"
             },
             "platform": {
-                "platformName": "{{ platform.name }}"
+                "platformName": "{{ platform }}"
             },
             "lineOfBusiness": {
-                "lineOfBusinessName": "{{ line_of_business.name }}"
+                "lineOfBusinessName": "{{ line_of_business }}"
             },
             "productFamilyId": "1234",
             "instanceName": "{{ vnf.vnf_name }}",
