--- a/src/onapsdk/so/templates/instantiate_network_vnf_ala_carte_base.json.j2
+++ b/src/onapsdk/so/templates/instantiate_network_vnf_ala_carte_base.json.j2
@@ -21,10 +21,10 @@
             "lcpCloudRegionId": "{{ cloud_region.cloud_region_id }}"
         },
         "lineOfBusiness": {
-            "lineOfBusinessName": "{{ line_of_business.name }}"
+            "lineOfBusinessName": "{{ line_of_business }}"
         },
         "platform": {
-            "platformName": "{{ platform.name }}"
+            "platformName": "{{ platform }}"
         },
         "relatedInstanceList": [{
             "relatedInstance": {
