--- a/src/onapsdk/so/templates/deletion_service.json.j2
+++ b/src/onapsdk/so/templates/deletion_service.json.j2
@@ -15,6 +15,8 @@
 			"testApi": "GR_API",
 			"aLaCarte": {{ a_la_carte | tojson }}
 		}{% if service_instance.service_subscription.sdc_service.vnfs %},
+		{# the code below is needed to be refactored #}
+		{# https://gitlab.com/Orange-OpenSource/lfn/onap/python-onapsdk/-/issues/133 #}
         "cloudConfiguration": {
             "cloudOwner": "{{ service_instance.service_subscription.cloud_region.cloud_owner }}",
             "lcpCloudRegionId": "{{ service_instance.service_subscription.cloud_region.cloud_region_id }}",
