--- a/src/onapsdk/so/templates/deletion_vf_module.json.j2
+++ b/src/onapsdk/so/templates/deletion_vf_module.json.j2
@@ -16,6 +16,8 @@
 			"testApi": "GR_API",
 			"aLaCarte": {{ a_la_carte | tojson }}
 		},
+		{# the code below is needed to be refactored #}
+		{# https://gitlab.com/Orange-OpenSource/lfn/onap/python-onapsdk/-/issues/133 #}
         "cloudConfiguration": {
             "cloudOwner": "{{ vf_module_instance.vnf_instance.service_instance.service_subscription.cloud_region.cloud_owner }}",
             "lcpCloudRegionId": "{{ vf_module_instance.vnf_instance.service_instance.service_subscription.cloud_region.cloud_region_id }}",
