--- a/src/onapsdk/so/templates/instantiate_service_ala_carte.json.j2
+++ b/src/onapsdk/so/templates/instantiate_service_ala_carte.json.j2
@@ -38,8 +38,8 @@
 			"projectName": "{{ project }}"
 		},
 		"owningEntity": {
-			"owningEntityId": "{{ owning_entity }}",
-			"owningEntityName": "{{ owning_entity }}"
+			"owningEntityId": "{{ owning_entity.owning_entity_id }}",
+			"owningEntityName": "{{ owning_entity.name }}"
 		}
 	}
 }
