VNF a'la carte instantiation parameters

--- a/src/onapsdk/so/templates/instantiate_network_vnf_ala_carte_base.json.j2
+++ b/src/onapsdk/so/templates/instantiate_network_vnf_ala_carte_base.json.j2
@@ -11,7 +11,9 @@
             {% block model_info %}{% endblock %}
         },
         "requestParameters": {
-            "userParams": [],
+            "userParams": [
+                {% block user_params %}{% endblock %}
+            ],
             "aLaCarte": true,
             "testApi": "GR_API"
         },
