--- a/src/onapsdk/so/templates/instantiate_service_ala_carte.json.j2
+++ b/src/onapsdk/so/templates/instantiate_service_ala_carte.json.j2
@@ -35,7 +35,7 @@
 			"globalSubscriberId": "{{ customer.global_customer_id }}"
 		},
 		"project": {
-			"projectName": "{{ project.name }}"
+			"projectName": "{{ project }}"
 		},
 		"owningEntity": {
 			"owningEntityId": "{{ owning_entity.owning_entity_id }}",
