--- a/src/onapsdk/so/templates/instantiate_vnf_ala_carte.json.j2
+++ b/src/onapsdk/so/templates/instantiate_vnf_ala_carte.json.j2
@@ -8,59 +8,11 @@
     "modelCustomizationId": "{{ vnf.metadata["customizationUUID"] }}",
     "modelCustomizationName": "{{ vnf.name }}"
 {% endblock %}
-
-{# {
-    "requestDetails": {
-        "requestInfo": {
-            "instanceName": "{{ vnf_service_instance_name }}",
-            "source": "VID",
-            "suppressRollback": false,
-            "requestorId": "test",
-            "productFamilyId": "1234"
-        },
-        "modelInfo": {
-            "modelType": "vnf",
-            "modelInvariantId": "{{ vnf.metadata["invariantUUID"] }}",
-            "modelVersionId": "{{ vnf.metadata["UUID"] }}",
-            "modelName": "{{ vnf.metadata["name"] }}",
-            "modelVersion": "{{ vnf.metadata["version"] }}",
-            "modelCustomizationId": "{{ vnf.metadata["customizationUUID"] }}",
-            "modelCustomizationName": "{{ vnf.name }}"
-        },
-        "requestParameters": {
-            "userParams": [
-                {% for parameter in vnf_parameters %}
-                {
-                    "name": "{{ parameter.name }}",
-                    "value": "{{ parameter.value }}"
-                }{% if not loop.last %},{% endif %}
-                {% endfor %}
-            ],
-            "aLaCarte": true,
-            "testApi": "GR_API"
-        },
-        "cloudConfiguration": {
-            "tenantId": "{{ tenant.tenant_id }}",
-            "cloudOwner": "{{ cloud_region.cloud_owner }}",
-            "lcpCloudRegionId": "{{ cloud_region.cloud_region_id }}"
-        },
-        "lineOfBusiness": {
-            "lineOfBusinessName": "{{ line_of_business.name }}"
-        },
-        "platform": {
-            "platformName": "{{ platform.name }}"
-        },
-        "relatedInstanceList": [{
-            "relatedInstance": {
-                "instanceId": "{{ service_instance.instance_id }}",
-                "modelInfo": {
-                    "modelType": "service",
-                    "modelName": "{{ service.name }}",
-                    "modelInvariantId": "{{ service.unique_uuid }}",
-                    "modelVersion": "1.0",
-                    "modelVersionId": "{{ service.identifier }}"
-                }
-            }
-        }]
-    }
-} #}
+{% block user_params %}
+{% for parameter in vnf_parameters %}
+{
+    "name": "{{ parameter.name }}",
+    "value": "{{ parameter.value }}"
+}{% if not loop.last %},{% endif %}
+{% endfor %}
+{% endblock %}
