--- a/src/onapsdk/so/templates/instantiate_service_ala_carte.json.j2
+++ b/src/onapsdk/so/templates/instantiate_service_ala_carte.json.j2
@@ -28,7 +28,7 @@
                 {% endif %}
 			],
 			"testApi": "GR_API",
-			"subscriptionServiceType": "{{ sdc_service.name }}",
+			"subscriptionServiceType": "{{ service_subscription.service_type }}",
 			"aLaCarte": true
 		},
 		"subscriberInfo": {
